--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=ToDo
 
 ## data source connection
-spring.datasource.url=jdbc:mysql://localhost:3306/student_tracker
+spring.datasource.url=jdbc:mysql://localhost:3306/todo
 spring.datasource.username=root
 spring.datasource.password=pass
 
